@@ -1,5 +1,6 @@
 Version 2.02.48 - 
 ===============================
+  Re-instate partial activation support in clustered mode. (2.02.40)
   Use 'lvm lvresize' instead of 'lvresize' in fsadm.
   Do not use '-n' realine option in fsadm for busybox compatiblity.
   Update vgrename, vgsplit, and vgcreate to use vg_lock_newname.
